syntax = "proto3";

option java_package = "ru.nsu.assjohns.grpc";
option java_multiple_files = true;
option java_outer_classname = "AuthProto";

service AuthService {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string token = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
}
